--- a/client/static/profile.html
+++ b/client/static/profile.html
@@ -25,7 +25,7 @@
 </style>
 <body>
 <div class="grid-container-2">
-
+  <h1>Welcome Alien!</h1>
 	<div id="photo" class="grid-item">Photo</div>
 
 </div>
