--- a/client/static/about.html
+++ b/client/static/about.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Page Title</title>
+
+    <! Temporary Styling ->
+
 <style>
 body {
   background-color: black;
@@ -21,9 +24,18 @@ body {
 </style>
 </head>
 <body>
+
+    <! Main header ->
+
 <h1><u>You're Now in Project Amber</u></h1>
+
+    <! Greetings and Description ->
+
 <p>Welcome new Ruler!</p>
 <p>Project Amber is a multiplayer nation-building simulator where your job is to take down the opposing kingdom! Prepare your knights! Arm your traps! Strategize your attack! Haha only kidding, there will be none of the sort. Your child has fallen in love with theirs and by the laws of love, your victory shall depend on dance contests, pizza mines, and much more. Take that, mutually assured destruction!</p>
+
+    <! Hyperlinks to respective page ->
+
 <div class="grid-container">
 	<div class="grid-item"><a href="profile.html">View Your Ruler</div>
     <div class="grid-item"><a href="game.html">Play the Game</div>
