--- a/client/static/profile.html
+++ b/client/static/profile.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+
+  <! Temporary Styling ->
+
 <style>
 .grid-container {
   display: grid;
@@ -24,15 +27,20 @@
 }
 </style>
 <body>
+
+  <! Greetings and Photo Frame ->
+
 <div class="grid-container-2">
   <h1>Welcome Alien!</h1>
 	<div id="photo" class="grid-item">Photo</div>
 
 </div>
 
+  <! Stats and respective numbers ->
+
 <div class="grid-container">
 	
-    <div class="grid-item">Strength: #</div>
+  <div class="grid-item">Strength: #</div>
 	<div class="grid-item">Agility: #</div>
 	<div class="grid-item">Constitution: #</div>
 	<div class="grid-item">Intelligence: #</div>
