Added a functional navbar

--- a/client/static/game.html
+++ b/client/static/game.html
@@ -1,19 +1,57 @@
-<!DOCTYPE html>
 <html>
 <head>
-<title>Amber Skeleton</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+</style>
 </head>
 <body>
 
-<h1>Welcome back to for the love of martians!</h1>
-<h2>Here's what happened last time!</h2>
+<div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="game.html">The game</a>
+  <a href="profile.html">Profile</a>
+  <a href="about.html">About us</a>
+</div>
 
-<dl>
-  <dt>By supporting the arts, your artists made your country more beautiful! But they went off and drew mustaches all over the rival's kingdom!</dt>
-  <dd>- +5 morale, -2 to cohesion</dd>
-  <dt>A local student in the university has discovered ancient human music, your scholars translate the language to mean "America, F*ck yeah!" This is studied by the royal dancers</dt>
-  <dd> +10 to your dance force's skills.</dd>
-</dl>
+<div style="padding-left:16px">
+  <h2>Welcome back to the For the Love of Martians!</h2>
+  <p>How has your day been, your majesty?</p>
+  <ol>
+<li>Be sure to collect your daily pizza coffers here, sire! We cannot run a kingdom efficiently without them!</li>
+<li>Shall we address some issues, your majesty? Here's a good one! Should we: Legalize MoonGrass?</li>
+<li>Our barracks are itching for a new competition! Shall we challenge the enemy kingdom to some very royal games?</li>
+</ol>
+
+   <img src="AlienPfP.jpg" alt="Avatar" class="avatar">
+</div>
 
 </body>
 </html>
