--- a/client/static/index.html
+++ b/client/static/index.html
@@ -1,18 +1,51 @@
-<!DOCTYPE html>
 <html>
 <head>
-<title>Amber Skeleton</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+</style>
 </head>
 <body>
 
-<h1>Hello, and welcome to the amber skeleton. This page was brought to you by worldbuilder, Thomas Mahoney</h1>
-<p>Here are the links.</p>
+<div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="game.html">The game</a>
+  <a href="profile.html">Profile</a>
+  <a href="about.html">About us</a>
+</div>
 
-<a href="about.html">About us</a>
+<div style="padding-left:16px">
+  <h2>Hello, and welcome to For The Love Of Martians!</h2>
+  <p>Uh-oh! Your child has fallen in love with an heir to the rival kingdom! You want them to be happy, but can you turn this into a beautiful frenemyship in a multiplayer nation-building simulator like no other?</p>
 
-<a href="game.html">The game</a>
-
-<a href="profile.html">profiles</a>
+</div>
 
 </body>
-</html> 
+</html>
