--- a/client/static/profile.html
+++ b/client/static/profile.html
@@ -1,6 +1,38 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: auto auto;
@@ -23,7 +55,26 @@
   text-align: center;
 }
 </style>
+</head>
 <body>
+
+  <div class="topnav">
+    <a class="active" href="index.html">Home</a>
+    <a href="game.html">The game</a>
+    <a href="profile.html">Profile</a>
+    <a href="about.html">About us</a>
+  </div>
+
+  <div style="padding-left:16px">
+    <h2>Here's a quick rundown on your stats</h2>
+    <p>Looking good, your majesty! Keep it up!</p>
+    <ol>
+  <li>By supporting the arts, you have increased morale in your kingdom! But those artists drew mustaches all over the enemy kingdom...but they seemed to have improved their art!</li>
+  <li>Your loyal pizza miners have been going on vacation at the same time. Your rate of mining will decrease for a small period</li>
+  <li>The ancient human symphony "Megalovania" has been discovered, your dance team is studying this music to incorporate new moves! +5 Culture, +10 dance skills</li>
+</ol>
+  </div>
+
 <div class="grid-container-2">
 
 	<div id="photo" class="grid-item">Photo</div>
@@ -31,14 +82,13 @@
 </div>
 
 <div class="grid-container">
-	
+
     <div class="grid-item">Strength: #</div>
 	<div class="grid-item">Agility: #</div>
 	<div class="grid-item">Constitution: #</div>
 	<div class="grid-item">Intelligence: #</div>
 
 </div>
-
 </body>
 
 </html>
