--- a/client/static/profile.html
+++ b/client/static/profile.html
@@ -40,10 +40,10 @@
 
 <div class="grid-container">
 	
-  <div class="grid-item">Strength: #</div>
-	<div class="grid-item">Agility: #</div>
-	<div class="grid-item">Constitution: #</div>
-	<div class="grid-item">Intelligence: #</div>
+  <div class="grid-item">Population: #</div>
+	<div class="grid-item">Rank: #</div>
+	<div class="grid-item">Happiness: #</div>
+	<div class="grid-item">Marriage: #</div>
 
 </div>
 
