--- a/client/static/index.html
+++ b/client/static/index.html
@@ -14,7 +14,10 @@
 
 <a href="game.html">The game</a>
 
-<a href="profile.html">profiles</a>
+<a href="profile.html">Profiles</a>
+
+<!--for testing purposes only-->
+<a href="adminpanel.html">Admin Panel</a>
 
 <form method="post" action="login">
     <table>
@@ -76,5 +79,4 @@
     });
     </script>
 </body>
-</html> 
-
+</html>
