--- a/client/static/index.html
+++ b/client/static/index.html
@@ -1,13 +1,21 @@
 <html>
 <head>
-<title>Amber Skeleton</title>
+<title>Amber Prototype</title>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"></script>
     <link href="/stylesheet.css" rel="stylesheet"/>
+<style>
+    .center {
+        margin: auto;
+        width: 60%;
+        border: 3px solid #73AD21;
+        padding: 10px;
+    }
+</style>
 </head>
 <body>
-<h1>For the Love of Martians!</h1>
+<h1 align="center">For the Love of Martians!</h1>
 
 <div style="padding-left:16px">
   <h2>Hello, and welcome to For The Love Of Martians!</h2>
@@ -18,7 +26,7 @@
 <a href="profile.html">Profiles</a>
 
 <form method="post" action="login">
-    <table>
+    <table align="center">
         <tr>
             <th colspan="2">
                 Log in
@@ -52,7 +60,7 @@
     </table>
 </form>
 
-<table>
+<table align="center">
     <tr>
 <td><form id="registration" action="register" method="POST">
     New Username: <input type="text" name="username" id="regname" /><br/>
