--- a/client/static/about.html
+++ b/client/static/about.html
@@ -20,6 +20,9 @@
 <p><b>Trading:</b> You are free to message other kingdoms in attempts to make a trade offer. This is especially encouraged under two circumstances: to help cover your shortcomings with the aid of a country that specializes in a resource you do not, or to simply help out your friends. That being said, you are free to trade to any player for any reason. 
 
 <p><b>Messaging:</b> The nature of this game is social and you can look up other Kingdoms and send them messages: whether it be to offer trades or simply to chat and ask for strategies to get ahead. The choice is yours.
+	
+	<button><a href="game.ejs">Back</a></button>
+	
     </div>
 </body>
 </html>
